fix: set sd21 controlnet to false

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -394,15 +394,16 @@
         "\n",
         "# @markdown ### **SD v1.x Model**\n",
         "anything_v3_0 = False  # @param {type: 'boolean'}\n",
-        "anime_pastel_dream = False  # @param {type: 'boolean'}\n",
+        "counterfeit_v3 = False  # @param {type: 'boolean'}\n",
         "anylora = True  # @param {type: 'boolean'}\n",
         "chilloutmix_ni = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **SD v2.x 768v Model**\n",
-        "replicant_v2 = False  # @param {type: 'boolean'}\n",
-        "waifu_diffusion_v1_5_e2_aesthetic = False  # @param {type: 'boolean'}\n",
+        "replicant_v3 = False  # @param {type: 'boolean'}\n",
+        "waifu_diffusion_v1_5_illusion = False  # @param {type: 'boolean'}\n",
         "illuminati_diffusion_v1_1 = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **VAE Model**\n",
-        "anime = True  # @param {type: 'boolean'}\n",
+        "anime = False  # @param {type: 'boolean'}\n",
+        "blessed = True  # @param {type: 'boolean'}\n",
         "waifu_diffusion = False  # @param {type: 'boolean'}\n",
         "stable_diffusion = False  # @param {type: 'boolean'}\n",
         "\n",
@@ -410,17 +411,18 @@
         "downloadVAE = []\n",
         "\n",
         "models = [\n",
-        "    (\"anything_v3_0\", \"https://huggingface.co/AdamOswald1/Anything-Preservation/resolve/4121e81acc47bb87e46480ba1344b5ab57134b88/Anything-V3.0-pruned.safetensors\"),\n",
-        "    (\"anime_pastel_dream\", \"https://huggingface.co/Lykon/AnimePastelDream/resolve/main/AnimePastelDream_Soft_noVae_fp16.safetensors\"),\n",
-        "    (\"anylora\", \"https://huggingface.co/Lykon/AnyLoRA/resolve/main/AnyLoRA_noVae_fp16.safetensors\"),\n",
+        "    (\"anything_v3_0\", \"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/anything-v3-fp16-pruned.safetensors\"),\n",
+        "    (\"counterfeit_v3\", \"https://huggingface.co/gsdf/Counterfeit-V3.0/resolve/main/Counterfeit-V3.0_fp16.safetensors\"),\n",
+        "    (\"anylora\", \"https://huggingface.co/Lykon/AnyLoRA/resolve/main/AnyLoRA_noVae_fp16-pruned.ckpt\"),\n",
         "    (\"chilloutmix_ni\", \"https://huggingface.co/naonovn/chilloutmix_NiPrunedFp32Fix/resolve/main/chilloutmix_NiPrunedFp32Fix.safetensors\"),\n",
-        "    (\"replicant_v2\", \"https://huggingface.co/gsdf/Replicant-V2.0/resolve/main/Replicant-V2.0_fp16.safetensors\"),\n",
-        "    (\"waifu_diffusion_v1_5_e2_aesthetic\", \"https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-aesthetic-fp16.safetensors\"),\n",
+        "    (\"replicant_v3\", \"https://huggingface.co/gsdf/Replicant-V3.0/resolve/main/Replicant-V3.0_fp16.safetensors\"),\n",
+        "    (\"waifu_diffusion_v1_5_illusion\", \"https://huggingface.co/waifu-diffusion/wd-1-5-beta3/resolve/main/wd-illusion-fp16.safetensors\"),\n",
         "    (\"illuminati_diffusion_v1_1\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/illuminatiDiffusionV1_v11.safetensors\"),\n",
         "]\n",
         "\n",
         "vaeList = [\n",
         "    (\"anime\", \"https://huggingface.co/Linaqruf/personal-backup/resolve/main/vae/animevae.pt\"),\n",
+        "    (\"blessed\", \"https://huggingface.co/NoCrypt/blessed_vae/resolve/main/blessed2.vae.pt\"),\n",
         "    (\"waifu_diffusion\", \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\"),\n",
         "    (\"stable_diffusion\", \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\"),\n",
         "]\n",
@@ -504,13 +506,10 @@
         "pre_download_annotator = True  # @param {type: 'boolean'}\n",
         "# @markdown ### **SDv1.x ControlNet Model**\n",
         "control_v11_sd15_model = True  # @param {type: 'boolean'}\n",
-        "t2i_adapter_sd15_model = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **SDv2.x ControlNet Model**\n",
-        "control_v10_sd21_model = False  # @param {type: 'boolean'}\n",
-        "control_v10_wd15_model = False  # @param {type: 'boolean'}\n",
+        "control_v11_sd21_model = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **ControlNet Config**\n",
         "control_net_max_models_num = 2 #@param {type:\"slider\", min:1, max:10, step:1}\n",
-        "control_net_model_adapter_config = \"sketch_adapter_v14.yaml\" #@param [\"image_adapter_v14.yaml\", \"sketch_adapter_v14.yaml\", \"t2iadapter_color_sd14v1.yaml\", \"t2iadapter_keypose_sd14v1.yaml\", \"t2iadapter_style_sd14v1.yaml\"]\n",
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
         "\n",
         "annotator_dict = {\n",
@@ -554,33 +553,18 @@
         "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11f1e_sd15_tile_fp16.safetensors\",\n",
         "]\n",
         "\n",
-        "t2i_adapter_sd15_url = [\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_style_sd14v1.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_sketch_sd14v1.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_seg_sd14v1.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_openpose_sd14v1.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_keypose_sd14v1.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_depth_sd14v1.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_color_sd14v1.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_canny_sd14v1.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_canny_sd15v2.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_depth_sd15v2.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_sketch_sd15v2.pth\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_zoedepth_sd15v1.pth\",\n",
-        "]\n",
-        "\n",
-        "control_v10_sd21_url = [\n",
-        "    \"https://huggingface.co/ckpt/ControlNet/resolve/main/canny-sd21-safe.safetensors\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet/resolve/main/depth-sd21-safe.safetensors\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet/resolve/main/hed-sd21-safe.safetensors\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet/resolve/main/openpose-sd21-safe.safetensors\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet/resolve/main/scribble-sd21-safe.safetensors\",\n",
-        "]\n",
-        "\n",
-        "control_v10_wd15_url = [\n",
-        "    \"https://huggingface.co/ckpt/ControlNet/resolve/main/diff_control_wd15beta2_canny.safetensors\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet/resolve/main/diff_control_wd15beta2_depth.safetensors\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet/resolve/main/diff_control_wd15beta2_pose.safetensors\",\n",
+        "control_v11_sd21_url = [\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_ade20k.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_canny.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_color.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_depth.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_hed.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_lineart.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_normalbae.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_openpose.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_openposev2.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_scribble.safetensors\",\n",
+        "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_zoedepth.safetensors\"\n",
         "]\n",
         "\n",
         "def read_config(filename):\n",
@@ -593,9 +577,12 @@
         "        json.dump(config, f, indent=4)\n",
         "\n",
         "def cldm_config_path(destination_path):\n",
-        "    if \"_sd15_\" in destination_path or \"_sd15s2_\" in destination_path:\n",
-        "        return \"cldm_v15.yaml\"\n",
-        "    elif \"-sd21-\" in destination_path or \"_wd15beta2_\" in destination_path: \n",
+        "    if \"sd15\" in destination_path:\n",
+        "        if \"_shuffle_\" in destination_path:\n",
+        "            return \"control_v11e_sd15_shuffle.yaml\"\n",
+        "        else:\n",
+        "            return \"cldm_v15.yaml\"\n",
+        "    elif \"sd21\"in destination_path: \n",
         "        return \"cldm_v21.yaml\"\n",
         "    else:\n",
         "        return None\n",
@@ -605,8 +592,6 @@
         "    if control_net_model_config is not None:\n",
         "        cldm_config_src = os.path.join(extensions_dir, os.path.join(\"sd-webui-controlnet/models\", control_net_model_config))\n",
         "        cldm_config_dst = os.path.splitext(destination_path)[0] + \".yaml\"\n",
-        "        if \"_shuffle_\" in cldm_config_dst:\n",
-        "            cldm_config_src = os.path.join(extensions_dir, \"sd-webui-controlnet/models/control_v11e_sd15_shuffle.yaml\")\n",
         "        if not os.path.exists(cldm_config_dst):\n",
         "            shutil.copy(cldm_config_src, cldm_config_dst)\n",
         "\n",
@@ -635,7 +620,6 @@
         "    config = read_config(config_file)\n",
         "    config[\"control_net_max_models_num\"] = control_net_max_models_num\n",
         "    config[\"control_net_models_path\"] = control_dir\n",
-        "    config[\"control_net_model_adapter_config\"] = os.path.join(extensions_dir, os.path.join(\"sd-webui-controlnet/models\", control_net_model_adapter_config))\n",
         "    config[\"control_net_allow_script_control\"] = True\n",
         "    write_config(config_file, config)\n",
         "  \n",
@@ -648,20 +632,10 @@
         "        batch(control_v11_sd15_url, \n",
         "              \"SDv1.x ControlNet Model\", \n",
         "              is_annotator=False)\n",
-        "        \n",
-        "    if t2i_adapter_sd15_model:\n",
-        "        batch(t2i_adapter_sd15_url, \n",
-        "              \"SDv1.x Text2Image Adapter Model\", \n",
-        "              is_annotator=False)\n",
         "    \n",
-        "    if control_v10_sd21_model:\n",
-        "        batch(control_v10_sd21_url, \n",
+        "    if control_v11_sd21_model:\n",
+        "        batch(control_v11_sd21_url, \n",
         "              \"SDv2.x ControlNet Model\", \n",
-        "              is_annotator=False)\n",
-        "    \n",
-        "    if control_v10_wd15_model:\n",
-        "        batch(control_v10_wd15_url, \n",
-        "              \"WD1.5 ControlNet Model\", \n",
         "              is_annotator=False)\n",
         "        \n",
         "print(f\"\u001b[1;32mDownloading...\")\n",
@@ -1053,9 +1027,6 @@
         "    else:\n",
         "        return original_dir\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
         "valid_ckpt_dir = is_dir_exist(os.path.join(fused_dir, \"model\"), models_dir)\n",
         "valid_vae_dir = is_dir_exist(os.path.join(fused_dir, \"vae\"), vaes_dir)\n",
         "valid_embedding_dir = is_dir_exist(os.path.join(fused_dir, \"embedding\"), embeddings_dir)\n",
@@ -1134,8 +1105,6 @@
         "              \n",
         "os.chdir(repo_dir)\n",
         "change_theme(theme)\n",
-        "\n",
-        "print(\"\u001b[1;32m\")\n",
         "\n",
         "if use_gradio_auth:\n",
         "      print(\"Gradio Auth (use this account to login):\")\n",
