feat: added cell to keep tab alive for mobile

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -1262,6 +1262,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title ## **Keep Tab Alive for Mobile**\n",
+        "#@markdown Make sure to run cell this before `Start Cagliostro Colab UI`\n",
+        "\n",
+        "%%html\n",
+        "<b>Press play on the music player to keep the tab alive, then start KoboldAI below (Uses only 13MB of data)</b><br/>\n",
+        "<audio src=\"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\" controls>"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "9QY3kkkim_fU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# @title ## **Download Generated Images V2** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#download-generated-images-v2)</small></small>\n",
         "from IPython.utils import capture\n",
         "from huggingface_hub import login\n",
