fix: turn `update_extensions` on

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -96,7 +96,7 @@
         "# @markdown ### **Repo Config**\n",
         "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-dev\", \"Anapnoe\"]\n",
         "update_webui = False  # @param {type:'boolean'}\n",
-        "update_extensions = False  # @param {type:'boolean'}\n",
+        "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch = False  # @param {type:'boolean'}\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
@@ -1258,23 +1258,6 @@
       "metadata": {
         "id": "4SUHPtGLz2m4"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# @title ## **Keep Tab Alive for Mobile**\n",
-        "#@markdown Make sure to run cell this before `Start Cagliostro Colab UI`\n",
-        "\n",
-        "%%html\n",
-        "<b>Press play on the music player to keep the tab alive, then start KoboldAI below (Uses only 13MB of data)</b><br/>\n",
-        "<audio src=\"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\" controls>"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "9QY3kkkim_fU"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
