feat: added cell to keep tab alive for mobile https://github.com/Linaqruf/sd-notebook-collection/issues/37

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -47,6 +47,7 @@
         "import fileinput\n",
         "import subprocess\n",
         "import base64\n",
+        "import torch\n",
         "from google.colab import drive\n",
         "from datetime import timedelta\n",
         "from subprocess import getoutput\n",
@@ -140,10 +141,11 @@
         "    if os.path.exists(\"/usr/local/lib/python3.10/dist-packages/ffmpy-0.3.0.dist-info\"):\n",
         "        shutil.rmtree(\"/usr/local/lib/python3.10/dist-packages/ffmpy-0.3.0.dist-info\")\n",
         "\n",
-        "    s = getoutput(\"nvidia-smi\")\n",
         "    with capture.capture_output() as cap:\n",
-        "        if not \"T4\" in s:\n",
+        "        if not \"T4\" in getoutput(\"nvidia-smi\"):\n",
         "            !pip uninstall -y xformers\n",
+        "            if '2.0.1+cu118' in torch.__version__:\n",
+        "                !pip install xformers==0.0.20\n",
         "        del cap\n",
         "\n",
         "    !git config --global user.email \"you@example.com\"\n",
@@ -506,6 +508,7 @@
         "pre_download_annotator = True  # @param {type: 'boolean'}\n",
         "# @markdown ### **SDv1.x ControlNet Model**\n",
         "control_v11_sd15_model = True  # @param {type: 'boolean'}\n",
+        "t2i_adapter_model = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **SDv2.x ControlNet Model**\n",
         "control_v11_sd21_model = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **ControlNet Config**\n",
@@ -567,6 +570,21 @@
         "    \"https://huggingface.co/thibaud/controlnet-sd21/resolve/main/control_v11p_sd21_zoedepth.safetensors\"\n",
         "]\n",
         "\n",
+        "t2i_adapter_url = [\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_canny_sd14v1.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_canny_sd15v2.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_color_sd14v1.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_depth_sd14v1.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_depth_sd15v2.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_keypose_sd14v1.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_openpose_sd14v1.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_seg_sd14v1.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_sketch_sd14v1.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_sketch_sd15v2.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_style_sd14v1.pth\",\n",
+        "    \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_zoedepth_sd15v1.pth\"\n",
+        "]\n",
+        "\n",
         "def read_config(filename):\n",
         "    with open(filename, \"r\") as f:\n",
         "        config = json.load(f)\n",
@@ -577,13 +595,16 @@
         "        json.dump(config, f, indent=4)\n",
         "\n",
         "def cldm_config_path(destination_path):\n",
-        "    if \"sd15\" in destination_path:\n",
+        "    if \"control\" in destination_path and \"sd15\" in destination_path:\n",
         "        if \"_shuffle_\" in destination_path:\n",
         "            return \"control_v11e_sd15_shuffle.yaml\"\n",
         "        else:\n",
         "            return \"cldm_v15.yaml\"\n",
-        "    elif \"sd21\"in destination_path: \n",
+        "    elif \"control\" in destination_path and \"sd21\"in destination_path: \n",
         "        return \"cldm_v21.yaml\"\n",
+        "    elif \"t2i\" in destination_path:\n",
+        "        adapter_name = os.path.splitext(os.path.basename(destination_path))[0]\n",
+        "        return adapter_name + \".yaml\"\n",
         "    else:\n",
         "        return None\n",
         "\n",
@@ -624,19 +645,13 @@
         "    write_config(config_file, config)\n",
         "  \n",
         "    if pre_download_annotator:\n",
-        "        batch(annotator_dict, \n",
-        "              \"ControlNet Annotator/Preprocessor\", \n",
-        "              is_annotator=True)\n",
-        "              \n",
+        "        batch(annotator_dict, \"ControlNet Annotator/Preprocessor\", is_annotator=True)\n",
         "    if control_v11_sd15_model:\n",
-        "        batch(control_v11_sd15_url, \n",
-        "              \"SDv1.x ControlNet Model\", \n",
-        "              is_annotator=False)\n",
-        "    \n",
+        "        batch(control_v11_sd15_url, \"SDv1.x ControlNet Model\", is_annotator=False)\n",
+        "    if t2i_adapter_model:\n",
+        "        batch(t2i_adapter_url, \"SDv1.x Text2Image Adapter Model\", is_annotator=False)\n",
         "    if control_v11_sd21_model:\n",
-        "        batch(control_v11_sd21_url, \n",
-        "              \"SDv2.x ControlNet Model\", \n",
-        "              is_annotator=False)\n",
+        "        batch(control_v11_sd21_url, \"SDv2.x ControlNet Model\", is_annotator=False)\n",
         "        \n",
         "print(f\"\u001b[1;32mDownloading...\")\n",
         "start_time = time.time()\n",
@@ -945,6 +960,7 @@
         "import os\n",
         "import random\n",
         "import string\n",
+        "import torch\n",
         "from subprocess import getoutput\n",
         "\n",
         "%store -r \n",
@@ -963,10 +979,11 @@
         "use_presets = True # @param {type: 'boolean'}\n",
         "# @markdown ### **Arguments**\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
-        "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
         "\n",
         "if not \"T4\" in getoutput(\"nvidia-smi\"):\n",
         "    accelerator = \"opt-sdp-attention\"\n",
+        "    if '2.0.1+cu118' in torch.__version__:\n",
+        "        accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
         "\n",
         "auto_select_model = False # @param {type: 'boolean'}\n",
         "auto_select_VAE = True # @param {type: 'boolean'}\n",
@@ -1258,6 +1275,23 @@
       "metadata": {
         "id": "4SUHPtGLz2m4"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title ## **Keep Tab Alive for Mobile**\n",
+        "#@markdown Make sure to run cell this before `Start Cagliostro Colab UI`\n",
+        "\n",
+        "%%html\n",
+        "<b>Press play on the music player to keep the tab alive, then start KoboldAI below (Uses only 13MB of data)</b><br/>\n",
+        "<audio src=\"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\" controls>"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "x2iEfrmteqD9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
