fix: omit output

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -979,12 +979,12 @@
         "use_presets = True # @param {type: 'boolean'}\n",
         "# @markdown ### **Arguments**\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
-        "\n",
+        "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
         "if not \"T4\" in getoutput(\"nvidia-smi\"):\n",
-        "    accelerator = \"opt-sdp-attention\"\n",
+        "    valid_accelerator = \"opt-sdp-attention\"\n",
         "    if '2.0.1+cu118' in torch.__version__:\n",
-        "        accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
-        "\n",
+        "        valid_accelerator = accelerator\n",
+        "accelerator = valid_accelerator\n",
         "auto_select_model = False # @param {type: 'boolean'}\n",
         "auto_select_VAE = True # @param {type: 'boolean'}\n",
         "additional_arguments = \"--lowram --no-half-vae\" #@param {type: 'string'}\n",
@@ -1132,7 +1132,7 @@
         "config = {\n",
         "    \"enable-insecure-extension-access\": True,\n",
         "    \"disable-safe-unpickle\": True,\n",
-        "    f\"{accelerator}\": True,\n",
+        "    f\"{valid_accelerator}\": True,\n",
         "    f\"{tunnel}\": True if not tunnel == \"none\" and not ngrok_token else False,\n",
         "    \"share\": True if not ngrok_token else False,\n",
         "    \"gradio-auth\": f\"{user}:{password}\" if use_gradio_auth else None,\n",
