fix: accelerator logic error

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -980,11 +980,8 @@
         "# @markdown ### **Arguments**\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
         "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
-        "if not \"T4\" in getoutput(\"nvidia-smi\"):\n",
-        "    valid_accelerator = \"opt-sdp-attention\"\n",
-        "    if '2.0.1+cu118' in torch.__version__:\n",
-        "        valid_accelerator = accelerator\n",
-        "accelerator = valid_accelerator\n",
+        "if not \"T4\" in getoutput(\"nvidia-smi\") and not '2.0.1+cu118' in torch.__version__:\n",
+        "    accelerator = \"opt-sdp-attention\"\n",
         "auto_select_model = False # @param {type: 'boolean'}\n",
         "auto_select_VAE = True # @param {type: 'boolean'}\n",
         "additional_arguments = \"--lowram --no-half-vae\" #@param {type: 'string'}\n",
