fix: final fix for accelerator error

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -1129,7 +1129,7 @@
         "config = {\n",
         "    \"enable-insecure-extension-access\": True,\n",
         "    \"disable-safe-unpickle\": True,\n",
-        "    f\"{valid_accelerator}\": True,\n",
+        "    f\"{accelerator}\": True,\n",
         "    f\"{tunnel}\": True if not tunnel == \"none\" and not ngrok_token else False,\n",
         "    \"share\": True if not ngrok_token else False,\n",
         "    \"gradio-auth\": f\"{user}:{password}\" if use_gradio_auth else None,\n",
