fix: add lowram patch to fix sdv2 problem

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -283,10 +283,20 @@
         "            !git apply --whitespace=fix {patches_dir}/01-add-DPMPP-2M-V2.patch\n",
         "\n",
         "    if colab_optimizations:\n",
+        "        with capture.capture_output() as cap:\n",
+        "            lowram_patch_url = \"https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch\"\n",
+        "            sai_repo_path = os.path.join(repo_dir, \"repositories/stable-diffusion-stability-ai\")\n",
+        "            os.makedirs(patches_dir, exist_ok=True)\n",
+        "            \n",
+        "            subprocess.run([\"wget\", lowram_patch_url, \"-P\", patches_dir, \"-c\"], check=True)\n",
+        "            subprocess.run([\"git\", \"apply\", f\"{patches_dir}/stablediffusion-lowram.patch\"], cwd=sai_repo_path, check=True)\n",
+        "            \n",
+        "            shutil.rmtree(patches_dir)        \n",
+        "\n",
         "        !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\" {repo_dir}/modules/sd_models.py\n",
         "        !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' {repo_dir}/webui.py\n",
         "        !sed -i \"s@map_location='cpu'@map_location='cuda'@\" {repo_dir}/modules/extras.py\n",
-        "        shutil.rmtree(patches_dir)\n",
+        "        \n",
         "\n",
         "    if output_to_drive: \n",
         "        if not os.path.exists(\"/content/drive/MyDrive\"):\n",
