--- a/sd-colab-toolkit.ipynb
+++ b/sd-colab-toolkit.ipynb
@@ -45,45 +45,96 @@
         "import zipfile\n",
         "import shutil\n",
         "\n",
-        "root_dir = \"/content\"\n",
-        "repo_dir = os.path.join(root_dir, \"sd-scripts\")\n",
-        "models_dir = os.path.join(root_dir, \"models\")\n",
-        "vaes_dir = os.path.join(root_dir, \"vae\")\n",
-        "deps_dir = os.path.join(root_dir, \"deps\")\n",
-        "tools_dir = os.path.join(repo_dir, \"tools\")\n",
+        "root_dir    = \"/content\"\n",
+        "repo_dir    = os.path.join(root_dir, \"sd-scripts\")\n",
+        "models_dir  = os.path.join(root_dir, \"models\")\n",
+        "vaes_dir    = os.path.join(root_dir, \"vae\")\n",
+        "deps_dir    = os.path.join(root_dir, \"deps\")\n",
+        "tools_dir   = os.path.join(repo_dir, \"tools\")\n",
         "\n",
-        "ubuntu_deps_url = \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/ubuntu-deps.zip\"\n",
-        "ram_patch = \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/ram_patch.zip\"\n",
+        "repo_url    = \"https://github.com/kohya-ss/sd-scripts\"\n",
         "\n",
-        "def ubuntu_deps(url, dst):\n",
+        "def cprint(*args, color=\"default\", reset=True, tqdm_desc=False):\n",
+        "    color_codes = {\n",
+        "        \"default\"     : \"\\033[0m\",\n",
+        "        \"green\"       : \"\\033[0;32m\",\n",
+        "        \"red\"         : \"\\033[0;31m\",\n",
+        "        \"bold_green\"  : \"\\033[1;32m\",\n",
+        "        \"bold_red\"    : \"\\033[1;31m\",\n",
+        "    }\n",
+        "    \n",
+        "    if color in color_codes:\n",
+        "        color_start = color_codes[color]\n",
+        "        color_end = \"\"\n",
+        "        if reset:\n",
+        "            color_end = color_codes[\"default\"]\n",
+        "        formatted_text = \" \".join(str(arg) for arg in args)\n",
+        "        if tqdm_desc:\n",
+        "            color_end = \"\"\n",
+        "            return color_start + formatted_text + color_end\n",
+        "        else:\n",
+        "            print(color_start + formatted_text + color_end)\n",
+        "    else:\n",
+        "        if tqdm_desc:\n",
+        "            return \" \".join(str(arg) for arg in args)\n",
+        "        else:\n",
+        "            print(*args)\n",
+        "\n",
+        "def clone_repo(url, dir):\n",
+        "    if not os.path.exists(dir):\n",
+        "        subprocess.run([\"git\", \"clone\", url, dir], check=True)\n",
+        "\n",
+        "def ubuntu_deps(url, dst, desc):\n",
         "    os.makedirs(dst, exist_ok=True)\n",
-        "    filename = os.path.basename(url)\n",
-        "    !wget -q --show-progress {url}\n",
+        "    filename  = get_filename(url)\n",
+        "    subprocess.run([\"wget\", url], stdout=subprocess.DEVNULL)\n",
+        "\n",
         "    with zipfile.ZipFile(filename, \"r\") as deps:\n",
         "        deps.extractall(dst)\n",
-        "    !dpkg -i {dst}/*\n",
+        "\n",
+        "    for file in tqdm(os.listdir(dst), desc=desc):\n",
+        "        if file.endswith(\".deb\"):\n",
+        "            subprocess.run([\"dpkg\", \"-i\", os.path.join(dst, file)], stdout=subprocess.DEVNULL)\n",
+        "    \n",
         "    os.remove(filename)\n",
         "    shutil.rmtree(dst)\n",
-        "    \n",
+        "\n",
+        "def update_requirements(repo_dir, desired_module, desired_version):\n",
+        "    requirements_file = os.path.join(repo_dir, \"requirements.txt\")\n",
+        "\n",
+        "    with open(requirements_file, \"r\") as f:\n",
+        "        lines = f.readlines()\n",
+        "\n",
+        "    updated_lines = []\n",
+        "    for line in lines:\n",
+        "        if desired_module in line:\n",
+        "            line = f\"{desired_module}=={desired_version}\\n\"\n",
+        "        updated_lines.append(line)\n",
+        "\n",
+        "    with open(requirements_file, \"w\") as f:\n",
+        "      f.writelines(updated_lines)\n",
+        "\n",
         "def install_dependencies():\n",
-        "    os.chdir(repo_dir)\n",
-        "    !pip install --upgrade -r requirements.txt\n",
-        "    !pip install --upgrade --no-cache-dir gdown\n",
+        "    ram_patch_url = \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/ram_patch.zip\"\n",
+        "\n",
+        "    cprint(f\"Updating ubuntu package list...\", color=\"green\")\n",
+        "    subprocess.run([\"apt\", \"update\", \"-y\"], check=True)\n",
+        "\n",
+        "    cprint(f\"Installing ubuntu dependencies...\", color=\"green\")\n",
+        "    subprocess.run([\"apt\", \"install\", \"aria2\", \"lz4\", \"libunwind8-dev\", \"-y\"], check=True)\n",
+        "\n",
+        "    ubuntu_deps(ram_patch_url, deps_dir, cprint(\"Installing RAM allocation patch\", color=\"green\", tqdm_desc=True))\n",
+        "    \n",
+        "    cprint(f\"Installing requirements...\", color=\"green\")\n",
+        "    update_requirements(repo_dir, \"requests\", \"2.27.1\")\n",
+        "    subprocess.run(['pip', 'install', '--upgrade', '--no-cache-dir', 'gdown'], check=True)\n",
+        "    subprocess.run(['pip', 'install', '--upgrade', '-r', requirements_file], cwd=repo_dir, check=True)\n",
         "\n",
         "def main():\n",
         "    for dir in [models_dir, vaes_dir]:\n",
         "        os.makedirs(dir, exist_ok=True)\n",
-        "\n",
-        "    !apt -y update -qq\n",
-        "    !apt install libunwind8-dev -yqq\n",
         "    \n",
-        "    for url in [ubuntu_deps_url, ram_patch]:\n",
-        "        ubuntu_deps(url, deps_dir)\n",
-        "    os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
-        "\n",
-        "    if not os.path.isdir(repo_dir):\n",
-        "      !git clone https://github.com/kohya-ss/sd-scripts\n",
-        "\n",
+        "    clone_repo(repo_url, repo_dir)\n",
         "    install_dependencies()\n",
         "\n",
         "main()\n"
