feat: added ghost_note and majic_mix as default models

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -393,7 +393,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title ## **Download Model and VAE** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#download-model-and-vae)</small></small>\n",
+        "# @title ## **Download Default Model and VAE** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#download-model-and-vae)</small></small>\n",
         "import os\n",
         "import time\n",
         "from datetime import timedelta\n",
@@ -406,15 +406,15 @@
         "\n",
         "# @markdown ### **SD v1.x Model**\n",
         "anything_v3_0 = False  # @param {type: 'boolean'}\n",
-        "counterfeit_v3 = False  # @param {type: 'boolean'}\n",
-        "anylora = True  # @param {type: 'boolean'}\n",
-        "chilloutmix_ni = False  # @param {type: 'boolean'}\n",
+        "ghost_note = True  # @param {type: 'boolean'}\n",
+        "anylora = False  # @param {type: 'boolean'}\n",
+        "majic_mix_v4 = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **SD v2.x 768v Model**\n",
         "replicant_v3 = False  # @param {type: 'boolean'}\n",
         "waifu_diffusion_v1_5_illusion = False  # @param {type: 'boolean'}\n",
         "illuminati_diffusion_v1_1 = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **VAE Model**\n",
-        "anime = False  # @param {type: 'boolean'}\n",
+        "animevae = False  # @param {type: 'boolean'}\n",
         "blessed = True  # @param {type: 'boolean'}\n",
         "waifu_diffusion = False  # @param {type: 'boolean'}\n",
         "stable_diffusion = False  # @param {type: 'boolean'}\n",
@@ -424,16 +424,16 @@
         "\n",
         "models = [\n",
         "    (\"anything_v3_0\", \"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/anything-v3-fp16-pruned.safetensors\"),\n",
-        "    (\"counterfeit_v3\", \"https://huggingface.co/gsdf/Counterfeit-V3.0/resolve/main/Counterfeit-V3.0_fp16.safetensors\"),\n",
-        "    (\"anylora\", \"https://huggingface.co/Lykon/AnyLoRA/resolve/main/AnyLoRA_noVae_fp16-pruned.ckpt\"),\n",
-        "    (\"chilloutmix_ni\", \"https://huggingface.co/naonovn/chilloutmix_NiPrunedFp32Fix/resolve/main/chilloutmix_NiPrunedFp32Fix.safetensors\"),\n",
+        "    (\"ghost_note\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/GhostNoteDelta_m0528_fp16.safetensors\"),\n",
+        "    (\"anylora\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/AnyLoRA_noVae_fp16-pruned.safetensors\"),\n",
+        "    (\"majic_mix_v4\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/majicmixRealistic_v4.safetensors\"),\n",
         "    (\"replicant_v3\", \"https://huggingface.co/gsdf/Replicant-V3.0/resolve/main/Replicant-V3.0_fp16.safetensors\"),\n",
         "    (\"waifu_diffusion_v1_5_illusion\", \"https://huggingface.co/waifu-diffusion/wd-1-5-beta3/resolve/main/wd-illusion-fp16.safetensors\"),\n",
         "    (\"illuminati_diffusion_v1_1\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/illuminatiDiffusionV1_v11.safetensors\"),\n",
         "]\n",
         "\n",
         "vaeList = [\n",
-        "    (\"anime\", \"https://huggingface.co/Linaqruf/personal-backup/resolve/main/vae/animevae.pt\"),\n",
+        "    (\"animevae\", \"https://huggingface.co/Linaqruf/personal-backup/resolve/main/vae/animevae.pt\"),\n",
         "    (\"blessed\", \"https://huggingface.co/NoCrypt/blessed_vae/resolve/main/blessed2.vae.pt\"),\n",
         "    (\"waifu_diffusion\", \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\"),\n",
         "    (\"stable_diffusion\", \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\"),\n",
