--- a/sd-colab-toolkit.ipynb
+++ b/sd-colab-toolkit.ipynb
@@ -203,7 +203,7 @@
         "\n",
         "# @markdown ### **Download Stable Diffusion Model**\n",
         "\n",
-        "model_url = \"https://civitai.com/api/download/models/55911\" #@param [\"Anime Model\", \"Anything V3.1\", \"AnyLoRA\", \"ChilloutMix Ni\", \"Stable Diffusion V1.5\", \"Replicant V3\", \"Illuminati Diffusion V1.1\", \"Waifu Diffusion V1.5 Beta 3\", \"Stable Diffusion V2.1\"] {allow-input: true}\n",
+        "model_url = \"https://civitai.com/api/download/models/82446\" #@param [\"Anime Model\", \"Anything V3.1\", \"AnyLoRA\", \"ChilloutMix Ni\", \"Stable Diffusion V1.5\", \"Replicant V3\", \"Illuminati Diffusion V1.1\", \"Waifu Diffusion V1.5 Beta 3\", \"Stable Diffusion V2.1\"] {allow-input: true}\n",
         "# @markdown ### **Download VAE Model**\n",
         "vae_url = \"\" #@param [\"\", \"Anime / Anything VAE\", \"Blessed VAE\", \"Waifu Diffusion VAE\", \"Stable Diffusion VAE\"] {allow-input: true}\n",
         "# @markdown ### **Download LoRA Model**\n",
@@ -373,7 +373,8 @@
         "main()\n"
       ],
       "metadata": {
-        "id": "A2NC0tm8vU-K"
+        "id": "A2NC0tm8vU-K",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -758,7 +759,7 @@
         "#@markdown This will be uploaded to model repo\n",
         "\n",
         "model_path = \"/content/models\" #@param {type :\"string\"}\n",
-        "path_in_repo = \"\" #@param {type :\"string\"}\n",
+        "path_in_repo = \"fp16\" #@param {type :\"string\"}\n",
         "revision = \"\" #@param {type :\"string\"}\n",
         "if revision:\n",
         "  api.create_branch(repo_id=model_repo, \n",
