--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -408,6 +408,7 @@
         "anything_v3_0 = False  # @param {type: 'boolean'}\n",
         "ghost_note = True  # @param {type: 'boolean'}\n",
         "anylora = False  # @param {type: 'boolean'}\n",
+        "lunar_dream_v2  = False  # @param {type: 'boolean'}\n",
         "majic_mix_v4 = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **SD v2.x 768v Model**\n",
         "replicant_v3 = False  # @param {type: 'boolean'}\n",
@@ -426,6 +427,7 @@
         "    (\"anything_v3_0\", \"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/anything-v3-fp16-pruned.safetensors\"),\n",
         "    (\"ghost_note\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/GhostNoteDelta_m0528_fp16.safetensors\"),\n",
         "    (\"anylora\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/AnyLoRA_noVae_fp16-pruned.safetensors\"),\n",
+        "    (\"lunar_dream_v2\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/ALunarDreamV2.0.safetensors\"),\n",
         "    (\"majic_mix_v4\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/majicmixRealistic_v4.safetensors\"),\n",
         "    (\"replicant_v3\", \"https://huggingface.co/gsdf/Replicant-V3.0/resolve/main/Replicant-V3.0_fp16.safetensors\"),\n",
         "    (\"waifu_diffusion_v1_5_illusion\", \"https://huggingface.co/waifu-diffusion/wd-1-5-beta3/resolve/main/wd-illusion-fp16.safetensors\"),\n",
@@ -713,9 +715,9 @@
         "os.chdir(root_dir)\n",
         "\n",
         "custom_model_url = \"\"  # @param {'type': 'string'}\n",
-        "custom_vae_url = \"\"  # @param {'type': 'string'}\n",
+        "custom_vae_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/vae/ClearVAE_V2.2.safetensors\"  # @param {'type': 'string'}\n",
         "custom_embedding_url = \"\"  # @param {'type': 'string'}\n",
-        "custom_LoRA_url = \"\"  # @param {'type': 'string'}\n",
+        "custom_LoRA_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/network_weight/GoodHands-beta2.safetensors, https://huggingface.co/Linaqruf/stolen/resolve/main/network_weight/flatBG.safetensors\"  # @param {'type': 'string'}\n",
         "custom_hypernetwork_url = \"\"  # @param {'type': 'string'}\n",
         "custom_extensions_url = \"\"  # @param {'type': 'string'}\n",
         "custom_upscaler_url = \"\"  # @param {'type': 'string'}\n",
